--- a/apps/docs/pages/index.ms.mdx
+++ b/apps/docs/pages/index.ms.mdx
@@ -1,20 +1,19 @@
 ## Dokumentasi OpenAPI
 
-Selamat datang ke dokumentasi bagi OpenAPI portal data terbuka rasmi Malaysia!
-Panduan komprehensif ini direka untuk memberi anda semua maklumat yang anda perlukan untuk menggunakan OpenAPI yang dibangunkan oleh kerajaan Malaysia dengan berkesan.
-Sama ada anda seorang pembangun, saintis data, atau seorang warganegara yang berminat untuk mengakses data yang telus,
-dokumentasi ini akan berfungsi sebagai panduan anda untuk memanfaatkan kekuatan OpenAPI.
+Selamat datang ke dokumentasi OpenAPI portal rasmi Data Terbuka Malaysia. 
+Panduan komprehensif ini dibangunkan bagi memberi maklumat yang diperlukan untuk menggunakan OpenAPI. 
+Dokumentasi ini akan berfungsi sebagai panduan kepada pembangun sistem, saintis data atau orang awam yang berminat untuk mengakses data yang telus bagi memanfaatkan OpenAPI.
 
 ## Apakah OpenAPI Ini?
 
 OpenAPI yang dibina oleh kerajaan Malaysia adalah API berdasarkan prinsip REST yang menggunakan rangkaian Django.
-API ini telah dibangunkan dengan matlamat untuk menyediakan akses data yang telus kepada semua warganegara, dengan matlamat-matlamat berikut:
+API ini telah dibangunkan dengan matlamat untuk menyediakan akses data yang telus kepada orang awam dengan matlamat-matlamat berikut:
 
-- **Akses Data yang Telus:** API ini menyediakan cara yang mesra pengguna untuk mengakses pelbagai set data, mempromosikan telus dan membolehkan pembuatan keputusan yang berinformasi.
-- **Kemudahan Penggunaan:** API ini direka untuk mudah difahami dan difahami, memastikan pengguna boleh mendapatkan data dengan cekap tanpa kerumitan yang tidak perlu.
-- **Pelbagai Set Data:** OpenAPI menawarkan akses kepada pelbagai data, membenarkan pengguna meneroka dan menganalisis pelbagai aspek masyarakat Malaysia.
+- **Akses Data yang Telus:** API ini adalah mesra pengguna yang membolehkan capaian kepada pelbagai set data, menyokong pembuatan keputusan yang telus dan berinformasi.
+- **Kemudahan Penggunaan:** API ini direka untuk mudah difahami dan memastikan pengguna boleh mendapatkan data dengan efisien.
+- **Pelbagai Set Data:** OpenAPI menawarkan capaian kepada pelbagai data, membenarkan pengguna meneroka dan menganalisis kepelbagaian aspek masyarakat Malaysia.
 
-## Menggunakan Penolong AI
+## Menggunakan ODaH (Open Data Helper)  
 
-Penolong AI dicipta untuk membantu anda mencari maklumat dalam laman dokumentasi ini.
-Untuk menggunakannya, klik butang Penolong AI yang terletak di bahagian kanan bawah laman.
+ODaH dicipta menggunakan AI untuk menolong anda mencari maklumat dalam laman dokumentasi ini.
+Untuk menggunakannya, klik butang ODaH yang terletak di bahagian kanan bawah laman ini!
