--- a/apps/docs/pages/index.en.mdx
+++ b/apps/docs/pages/index.en.mdx
@@ -1,6 +1,6 @@
 ## OpenAPI Documentation
 
-Welcome to the documentation for the Open API of Malaysia's official open data portal!
+Welcome to the documentation for the Open API of Malaysia's official Open Data portal!
 This comprehensive guide is designed to provide you with all the information you need to effectively utilize the Open API developed by the Malaysian government.
 Whether you are a developer, data scientist, or a citizen interested in accessing transparent data,
 this documentation will serve as your guide to leveraging the power of the Open API.
@@ -14,7 +14,7 @@ This API has been developed with the objective of providing transparent data acc
 - **Ease of Use:** The API is designed to be straightforward and easy to understand, ensuring that users can retrieve data efficiently without unnecessary complexity.
 - **Diverse Data Sets:** The Open API offers access to various data, allowing users to explore and analyze different aspects of Malaysian society.
 
-## Using the AI Helper
+## Using ODaH (Open Data Helper)
 
-The AI Helper is created to assist you in finding information within this documentation site.
-To use it, click the AI Helper button located at the bottom right of the page.
+ODaH is created using AI to assist you in finding information within this documentation site.
+To use it, click the ODaH's button located at the bottom right of the page!
