docs: update changelog

--- a/apps/docs/pages/changelog.en.mdx
+++ b/apps/docs/pages/changelog.en.mdx
@@ -1,3 +1,9 @@
+## 1.4.0 (2024-04-01)
+
+### GTFS Realtime API Update
+
+- Updated [GTFS Realtime API](realtime-api/gtfs-realtime) with new category `rapid-bus-mrtfeeder` for Prasarana GTFS-R.
+
 ## 1.3.0 (2023-11-14)
 
 ### GTFS Realtime API Release
