--- a/apps/docs/pages/changelog.ms.mdx
+++ b/apps/docs/pages/changelog.ms.mdx
@@ -1,3 +1,9 @@
+## 1.4.0 (2024-04-01)
+
+### Pengemaskinian API GTFS Realtime
+
+- Pengemaskinian [API GTFS Realtime](ms/realtime-api/gtfs-realtime) dengan kategory baharu `rapid-bus-mrtfeeder` untuk GTFS-R Prasarana.
+
 ## 1.3.0 (2023-11-14)
 
 ### Pelancaran API GTFS Realtime
