fix: update Bearer -> Token

--- a/apps/docs/pages/authentication.en.mdx
+++ b/apps/docs/pages/authentication.en.mdx
@@ -19,7 +19,7 @@ Once you have obtained an API token, you need to include it in your API requests
 1. Add the following header to your request:
 
    ```
-   Authorization: Bearer <YOUR_TOKEN_HERE>
+   Authorization: Token <YOUR_TOKEN_HERE>
    ```
 
    Replace `<YOUR_TOKEN_HERE>` with the actual token you received.
