--- a/apps/docs/pages/authentication.ms.mdx
+++ b/apps/docs/pages/authentication.ms.mdx
@@ -19,7 +19,7 @@ Setelah anda mendapatkan token API, anda perlu menyertakannya dalam permintaan A
 1. Tambahkan 'header' berikut ke permintaan anda:
 
    ```
-   Authorization: Bearer <TOKEN_ANDA_DI_SINI>
+   Authorization: Token <TOKEN_ANDA_DI_SINI>
    ```
 
    Gantikan `<TOKEN_ANDA_DI_SINI>` dengan token yang diterima.
