change page name from Open API Docs to Malaysia's Official Open API

--- a/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
@@ -3,7 +3,7 @@ import Head from "next/head";
 ## GTFS Realtime API Endpoint
 
 <Head>
-  <title>GTFS-R - Open API Docs</title>
+  <title>GTFS-R - Malaysia's Official Open API</title>
 </Head>
 
 ```http
