--- a/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
@@ -3,7 +3,7 @@ import Head from "next/head";
 ## Endpoint API GTFS Statik
 
 <Head>
-  <title>GTFS Static - Open API Docs</title>
+  <title>GTFS Static - Malaysia's Official Open API</title>
 </Head>
 
 ```http
