--- a/apps/docs/pages/index.ms.mdx
+++ b/apps/docs/pages/index.ms.mdx
@@ -1,4 +1,10 @@
+import Head from "next/head";
+
 ## Dokumentasi OpenAPI
+
+<Head>
+    <title>Malaysia's Official Open API</title>
+</Head>
 
 Selamat datang ke dokumentasi bagi OpenAPI portal data terbuka rasmi Malaysia!
 Panduan komprehensif ini direka untuk memberi anda semua maklumat yang anda perlukan untuk menggunakan OpenAPI yang dibangunkan oleh kerajaan Malaysia dengan berkesan.
