--- a/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
@@ -3,7 +3,7 @@ import Head from "next/head";
 ## _Endpoint_ API GTFS _Realtime_ (Masa Sebenar)
 
 <Head>
-  <title>GTFS-R - Malaysia's Official Open API</title>
+  <title>GTFS Realtime - Malaysia's Official Open API</title>
 </Head>
 
 ```http
