feat: change email to @digital

--- a/apps/docs/pages/authentication.ms.mdx
+++ b/apps/docs/pages/authentication.ms.mdx
@@ -2,7 +2,7 @@
 
 Walaupun penggunaan OpenAPI tidak memerlukan sebarang token pengesahan, kami menyediakan pilihan untuk memohon token jika penggunaan anda melebihi had kadar penggunaan awam yang ditetapkan. Untuk memohon token API, sila ikuti langkah-langkah berikut:
 
-1. Hantar emel ke [data.dtsa@mampu.gov.my](mailto:data.dtsa@mampu.gov.my) dengan butiran berikut:
+1. Hantar emel ke [data.dtsa@digital.gov.my](mailto:data.dtsa@digital.gov.my) dengan butiran berikut:
 
    - Nama anda
    - Alamat emel anda
