Replace old domains

--- a/apps/docs/pages/faq.en.mdx
+++ b/apps/docs/pages/faq.en.mdx
@@ -14,11 +14,11 @@ export function FAQBox({ title, children }) {
 ## General
 
 <FAQBox title="How can I notify the team of a bug on OpenAPI?">
-  To report a bug, [drop us an email](mailto:help.dtsa@digital.gov.my?subject=Bug).
+  To report a bug, [drop us an email](mailto:help.dtsa@jdn.gov.my?subject=Bug).
 </FAQBox>
 <FAQBox title="How can I suggest improvements for the site?">
   For improvement suggestions, [drop us an
-  email](mailto:help.dtsa@digital.gov.my?subject=Improvement).
+  email](mailto:help.dtsa@jdn.gov.my?subject=Improvement).
 </FAQBox>
 
 ## Data & Tech
