--- a/apps/docs/pages/realtime-api/gtfs-static.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.en.mdx
@@ -19,7 +19,7 @@ To learn more about GTFS and its specifications, you can visit the [GTFS documen
 
 This is the first time that Malaysia has had an official and freely-usable GTFS API. It is the result of months of hard work and collaboration between the data.gov.my developer team and various public transport operators. It is by no means complete; there are plenty of services that will only be integrated over the coming months and years. However, with several primary services already included, we felt that it was time to push it live - so that the private sector and public transport community could begin building from it, and most crucially, giving us feedback on how to improve it.
 
-If you have any feedback on the GTFS API, please write to us at data.dtsa@digital.gov.my - we welcome any and all constructive feedback!
+If you have any feedback on the GTFS API, please write to us at data.dtsa@jdn.gov.my - we welcome any and all constructive feedback!
 
 ### Source of GTFS Static Data
 
