--- a/apps/docs/pages/request-query.ms.mdx
+++ b/apps/docs/pages/request-query.ms.mdx
@@ -29,7 +29,11 @@ Parameter pertanyaan terdiri daripada sepasang nilai-nilai, di mana kunci dan ni
 ### Parameter `filter`
 
 ```http
+# satu lajur
 ?filter=<nilai>@<lajur>
+
+# beberapa lajur
+?filter=<nilai_1>@<lajur_1>,<nilai_2>@<lajur_2>,...<nilai_n>@<lajur_n>
 ```
 
 - Menyaring data berdasarkan **padanan rentetan tepat yang peka kes**.
