Amend public email

--- a/apps/docs/pages/authentication.en.mdx
+++ b/apps/docs/pages/authentication.en.mdx
@@ -2,7 +2,7 @@
 
 While accessing the OpenAPI does not require an API token, we provide the option to request a token if you anticipate reaching the rate limits or need increased usage. To request an API token, please follow the steps below:
 
-1. Send an email to [data.dtsa@jdn.gov.my](mailto:data.dtsa@jdn.gov.my) with the following details:
+1. Send an email to [dataterbuka@jdn.gov.my](mailto:dataterbuka@jdn.gov.my) with the following details:
 
    - Your name
    - Your email address
