Amend public email

--- a/apps/docs/pages/faq.ms.mdx
+++ b/apps/docs/pages/faq.ms.mdx
@@ -6,11 +6,11 @@ import { FAQBox } from "./faq.en.mdx";
 
 <FAQBox title="Bagaimanakah cara untuk melapori 'bug' di OpenAPI?">
   Untuk melaporkan sebarang 'bug' yang ditemui, sila [hantarkan e-mel kepada
-  kami](mailto:help.dtsa@jdn.gov.my?subject=Bug).
+  kami](mailto:dataterbuka@jdn.gov.my?subject=Bug).
 </FAQBox>
 <FAQBox title="Bagaimanakah cara untuk memberi cadangan penambahbaikan?">
   Sama juga, sebarang cadangan penambahbaikan boleh dianjurkan dengan [menghantarkan e-mel kepada
-  kami](mailto:help.dtsa@jdn.gov.my?subject=Improvement).
+  kami](mailto:dataterbuka@jdn.gov.my?subject=Improvement).
 </FAQBox>
 
 ## Data & Teknologi
