--- a/apps/docs/pages/response-format.ms.mdx
+++ b/apps/docs/pages/response-format.ms.mdx
@@ -8,7 +8,7 @@ Selepas menghantar permintaan API, anda akan menerima respons dengan kod dan ele
 | 400 |     Permintaan Buruk      | Permintaan tidak sah. Semak mesej ralat untuk maklumat lanjut.                                                                                            |
 | 404 |       Tidak Ditemui       | Sumber yang diminta tidak wujud.                                                                                                                          |
 | 429 | Terlalu Banyak Permintaan | Kadar penggunaan anda telah dihadkan. Mohon token API di [Pengesahan](authentication) untuk meningkatkan had penggunaan.                                  |
-| 500 |       Ralat Pelayan       | Ada sesuatu yang tidak kena dengan OpenAPI! Sila [hantarkan e-mel kepada kami](mailto:help.dtsa@jdn.gov.my?subject=Bug) jika anda menghadapi ralat ini. |
+| 500 |       Ralat Pelayan       | Ada sesuatu yang tidak kena dengan OpenAPI! Sila [hantarkan e-mel kepada kami](mailto:dataterbuka@jdn.gov.my?subject=Bug) jika anda menghadapi ralat ini. |
 
 ### Respons Sah
 
