--- a/apps/docs/pages/response-format.en.mdx
+++ b/apps/docs/pages/response-format.en.mdx
@@ -8,7 +8,7 @@ After sending an API request, you will receive a response with the following cod
 | 400  |    Bad Request    | Invalid request. Check error message for more information.                                                                           |
 | 404  |     Not Found     | The resource requested doesn’t exist.                                                                                                |
 | 429  | Too Many Requests | Your client is currently being rate limited. Request an API token at [Authentication](authentication) to increase usage limits.      |
-| 500  |   Server Error    | Something went wrong with OpenAPI! Please [drop us an email](mailto:help.dtsa@jdn.gov.my?subject=Bug) if you encounter this error. |
+| 500  |   Server Error    | Something went wrong with OpenAPI! Please [drop us an email](mailto:dataterbuka@jdn.gov.my?subject=Bug) if you encounter this error. |
 
 ### Valid Response
 
