--- a/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
@@ -12,36 +12,28 @@ GET https://api.data.gov.my/gtfs-static/<agency>
 
 ### Apakah fungsi API GTFS Statik?
 
-API GTFS Static menyediakan akses kepada jadual pengangkutan awam serta maklumat geospatial yang telah dipiawaikan mengikuti General Transit Feed Specification (GTFS). Untuk mendapat maklumat lanjut mengenai GTFS, anda boleh merujuk [dokumentasi GTFS](https://developers.google.com/transit/gtfs) yang disediakan oleh Google.
-
-### Nota penting: API ini dibangunkan secara _iterative_
-
-Ini adalah kali pertama Malaysia membekalkan API GTFS yang rasmi dan boleh digunakan secara terbuka dan percuma. Ia adalah hasil kerjasama antara pasukan pembangunan data.gov.my dengan pelbagai pengendali pengangkutan awam. Ia belum lagi lengkap; sememangnya, masih terdapat perkhidmatan yang hanya akan disepadukan dalam bulan dan tahun akan datang. Walau bagaimanapun, dengan beberapa perkhidmatan utama yang sudah terkandung, pihak kami merasakan sudah tiba masa untuk melancarkannya - supaya sektor swasta dan komuniti pengangkutan awam dapat membina produk atas API ini, dan yang paling penting, memberi kami maklum balas untuk meningkatkan lagi mutunya.
+API GTFS Statik menyediakan akses kepada jadual pengangkutan awam serta maklumat geospatial yang telah dipiawaikan mengikuti General Transit Feed Specification (GTFS). Untuk mendapat maklumat lanjut mengenai GTFS, anda boleh merujuk [dokumentasi GTFS](https://developers.google.com/transit/gtfs) yang disediakan oleh Google.
 
 ### Sumber Data bagi GTFS Statik
 
-API GTFS Statik menggabungkan data dari pelbagai agensi pengangkutan di Malaysia. Buat masa ini, agensi-agensi berikut menyumbang data pengangkutan mereka:
+API GTFS Statik menggabungkan data dari pelbagai agensi pengangkutan di Malaysia. Data kami kini merangkumi:
 
-- [**myBAS Johor Bahru**](https://www.causewaylink.com.my/mybas/en/): Pengendali perkhidmatan bas di Johor Bahru yang menyediakan pengangkutan bas di 19 laluan merentasi 5 koridor, termasuk Kota Tinggi, Masai, Kulai, Gelang Patah, dan Pontian.
 - [**KTMB (Keretapi Tanah Melayu Berhad)**](https://www.ktmb.com.my/): Pengendali keretapi yang menyediakan perkhidmatan keretapi di seluruh negara.
 - [**Prasarana**](https://myrapid.com.my/): Pengendali pengangkutan awam yang bertanggungjawab mengurus pelbagai mod pengangkutan termasuk LRT (Transit Aliran Ringan), MRT (Transit Aliran Massa), monorel, dan perkhidmatan bas.
+- [**BAS.MY**](https://www.apad.gov.my/index.php/en/projects-programs/bas-projek-program/program-transformasi-bas-berhenti-henti-sbst): Program Transformasi Bas Berhenti-Henti (SBST) di seluruh Malaysia yang dikendalikan oleh pelbagai pengendali perkhidmatan. Endpoint untuk Johor Bahru, Kangar, Alor Setar, Kuala Terengganu, Kota Bharu, dan Kuching sudahpun tersedia. Kami merancang untuk menambah liputan ke Melaka, Seremban, dan Ipoh menjelang 15 November 2025.
 
 ### Kekerapan Kemaskini
 
-- GTFS bagi myBAS Johor Bahru: **Apabila perlu**.
-- GTFS bagi Prasarana: **Apabila perlu**.
 - GTFS bagi KTMB: **Setiap hari pada pukul 00:01:00**.
+- GTFS bagi Prasarana: **Apabila perlu**.
+- GTFS bagi BAS.MY: **Apabila perlu**.
+
+Jika anda menjadualkan _cron_, kami syorkan untuk mengemaskini data statik sekurang-kurangnya sekali sehari, pada jam 4 pagi, iaitu sejurus sebelum perkhidmatan rel dan bas di seluruh negara mula beroperasi.
+
 
 ## Format Permintaan (_Query_) dan Respon
 
-API GTFS Statik menyediakan akses kepada data pengangkutan awam sebagai koleksi fail teks yang dibekalkan bersekali dalam fail ZIP. Anda boleh mengakses fail-fail data ini melalui titik akhir berikut:
-
-### myBAS Johor Bahru
-
-```http
-GET https://api.data.gov.my/gtfs-static/mybas-johor
-# Fail ZIP dikembalikan
-```
+API GTFS Statik menyediakan akses kepada data pengangkutan awam sebagai koleksi fail teks yang dibekalkan bersekali dalam fail ZIP. Anda boleh mengakses fail-fail data ini melalui _endpoint_ berikut:
 
 ### KTMB
 
@@ -54,6 +46,48 @@ GET https://api.data.gov.my/gtfs-static/ktmb
 
 ```http
 GET https://api.data.gov.my/gtfs-static/prasarana?category=<category>
+# Fail ZIP dikembalikan
+```
+
+### BAS.MY Johor Bahru
+
+```http
+GET https://api.data.gov.my/gtfs-static/mybas-johor
+# Fail ZIP dikembalikan
+```
+
+### BAS.MY Kangar
+
+```http
+GET https://api.data.gov.my/gtfs-static/mybas-kangar
+# Fail ZIP dikembalikan
+```
+
+### BAS.MY Alor Setar
+
+```http
+GET https://api.data.gov.my/gtfs-static/mybas-alor-setar
+# Fail ZIP dikembalikan
+```
+
+### BAS.MY Kuala Terengganu
+
+```http
+GET https://api.data.gov.my/gtfs-static/mybas-kuala-terengganu
+# Fail ZIP dikembalikan
+```
+
+### BAS.MY Kota Bharu
+
+```http
+GET https://api.data.gov.my/gtfs-static/mybas-kota-bharu
+# Fail ZIP dikembalikan
+```
+
+### BAS.MY Kuching
+
+```http
+GET https://api.data.gov.my/gtfs-static/mybas-kuching
 # Fail ZIP dikembalikan
 ```
 
