Feat: BAS.MY Melaka docs

--- a/apps/docs/pages/changelog.en.mdx
+++ b/apps/docs/pages/changelog.en.mdx
@@ -1,8 +1,20 @@
+## 1.6.0 (2025-10-13)
+
+### GTFS Realtime API Update
+
+- Updated [GTFS Realtime API](realtime-api/gtfs-realtime) with new endpoint for BAS.MY services in Melaka
+
+## 1.5.0 (2025-10-10)
+
+### GTFS Realtime API Update
+
+- Updated [GTFS Realtime API](realtime-api/gtfs-realtime) with new endpoints for BAS.MY services in 5 cities (Kangar, Alor Setar, Kota Bharu, Kuala Terengganu, Kuching)
+
 ## 1.4.0 (2024-04-01)
 
 ### GTFS Realtime API Update
 
-- Updated [GTFS Realtime API](realtime-api/gtfs-realtime) with new category `rapid-bus-mrtfeeder` for Prasarana GTFS-R.
+- Updated [GTFS Realtime API](realtime-api/gtfs-realtime) with new endpoint for MRT Feeder Bus services
 
 ## 1.3.0 (2023-11-14)
 
