--- a/apps/docs/pages/changelog.ms.mdx
+++ b/apps/docs/pages/changelog.ms.mdx
@@ -1,8 +1,20 @@
+## 1.6.0 (2025-10-13)
+
+### Pengemaskinian API GTFS Realtime
+
+- [API GTFS Realtime](ms/realtime-api/gtfs-realtime) dikemaskini dengan _endpoint_ baharu bagi perkhidmatan MRT Feeder Bus di Melaka
+
+## 1.5.0 (2025-10-10)
+
+### Pengemaskinian API GTFS Realtime
+
+- [API GTFS Realtime](ms/realtime-api/gtfs-realtime) dikemaskini dengan 5 _endpoint_ baharu bagi perkhidmatan BAS.MY di 5 bandar (Kangar, Alor Setar, Kota Bharu, Kuala Terengganu, Kuching)
+
 ## 1.4.0 (2024-04-01)
 
 ### Pengemaskinian API GTFS Realtime
 
-- Pengemaskinian [API GTFS Realtime](ms/realtime-api/gtfs-realtime) dengan kategory baharu `rapid-bus-mrtfeeder` untuk GTFS-R Prasarana.
+- [API GTFS Realtime](ms/realtime-api/gtfs-realtime) dikemaskini dengan _endpoint_ baharu bagi perkhidmatan MRT Feeder Bus
 
 ## 1.3.0 (2023-11-14)
 
