--- a/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
@@ -15,7 +15,7 @@ GET https://api.data.gov.my/gtfs-realtime/<feed>/<agency>
 GTFS _Realtime_ adalah lanjutan daripada [API GTFS Statik](gtfs-static) yang membolehkan pengendali pengangkutan awam untuk membekalkan masa ketibaan, amaran gangguan perkhidmatan, dan kedudukan kenderaan secara masa sebenar (_realtime_).
 Buat masa ini, API GTFS _Realtime_ kami hanya membekalkan kedudukan kenderaan sahaja; amaran gangguan perkhidmatan dan kemaskini masa ketibaan akan disusuli secara berperingkat pada 2026. Untuk maklumat lanjut mengenai GTFS _Realtime_ dan kegunaannya secara am, sila rujuk kepada https://gtfs.org/realtime/.
 
-_Nota: Ralat pengesahan bagi setiap \_endpoint_ dalam bahagian [Kedudukan Kenderaan](#vehicle-position) telah dijana dengan [Pengesah GTFS Realtime](https://github.com/MobilityData/gtfs-realtime-validator).\_
+_Nota: Ralat pengesahan bagi setiap endpoint [Kedudukan Kenderaan](#vehicle-position) telah dijana dengan [Pengesah GTFS Realtime](https://github.com/MobilityData/gtfs-realtime-validator)._
 
 ### Sumber Data bagi GTFS _Realtime_
 
